--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta property = "og:title" content = "Karin Povolozki-Rabichev Website" />
     <meta property = "og:type" content = "website" />
     <meta property = "og:description" content = "This website was coded and designed by me to tell you a bit about myself and showcase my varied projects" />
-    <meta property = "og:image" content = "C:\Users\vk4ur\Desktop\Front-End developing\Protfolio\blk-design-system-react-master\Personal-Website\public\sharebale_pic.png" />
+    <meta property = "og:image" content = "C:/Users/vk4ur/Desktop/Front-End developing/Protfolio/blk-design-system-react-master/Personal-Website/public/sharebale_pic.png" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
