Fixed meta open graph tags

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta property = "og:title" content = "Karin Povolozki-Rabichev Website" />
     <meta property = "og:type" content = "website" />
     <meta property = "og:description" content = "This website was coded and designed by me to tell you a bit about myself and showcase my varied projects" />
-    <meta property = "og:image" content = "https://4.bp.blogspot.com/-FGANoIcVMNs/V0oVgY9PKII/AAAAAAAAAC8/C2e_4_gTYD4DsZA88w6Rf4-A_5JfqQK5gCLcB/s1600/ex.jpg" />
+    <meta property = "og:image" content = "https://i.pinimg.com/736x/e8/8a/99/e88a990b723b5665a68b2763b5fd8355.jpg" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
